--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Register" android:launchMode="singleTask">
+        <activity android:name=".Login" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,7 @@
         <activity android:name=".EditHomePage" android:launchMode="singleTask"/>
         <activity android:name=".PersonalHome" android:launchMode="singleTask"/>
         <activity android:name=".PersonalInfoActivity" android:launchMode="singleTask"/>
-
+        <activity android:name=".Register" android:launchMode="singleTask"/>
     </application>
 
 </manifest>
