--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity
             android:name=".RegisterActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".MakeplanActivity"></activity>
+        <activity android:name=".MakeplanActivity" />
+        <activity android:name=".BodyjudgmentActivity"></activity>
     </application>
 
 </manifest>
