--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
     compile 'cn.bmob.android:http-legacy:1.0'
     compile project(':loopview')
-
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
