--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,40 +28,41 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".ui.LoginActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.SettingActivity"
+            android:name=".ui.SettingActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.BaseTranslucentActivity"
+            android:name=".ui.BaseTranslucentActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.EditHomePageActivity"
+            android:name=".ui.EditHomePageActivity"
             android:launchMode="singleTask" />
         <activity
-            android:name=".activity.PersonalInfoActivity"
+            android:name=".ui.PersonalInfoActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.RegisterActivity"
+            android:name=".ui.RegisterActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.BodyjudgmentActivity"
+            android:name=".ui.BodyjudgmentActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.BaseActivity"
+            android:name=".ui.BaseActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.MainActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -69,9 +70,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.EditMyInfoActivity"
+            android:name=".ui.EditMyInfoActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".activity.MakePlanActivity"></activity>
+        <activity android:name=".ui.MakePlanActivity" />
+        <activity android:name=".ui.ChooseActionActivity"></activity>
     </application>
 
 </manifest>
