修改主界面，添加功能模块，新闻资讯，我的收藏

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,9 @@
             android:name=".ui.EditMyInfoActivity"
             android:launchMode="singleTask" />
         <activity android:name=".ui.MakePlanActivity" />
-        <activity android:name=".ui.ChooseActionActivity"></activity>
+        <activity android:name=".ui.ChooseActionActivity" />
+        <activity android:name=".ui.MyHomeActivity" />
+        <activity android:name=".ui.NewsActivity"></activity>
     </application>
 
 </manifest>
