删除了工具类ChooseActionUtils类，增加了MakePlanUtils类，书写了动作详情界面，增加了健身动作选择之后可以显示在统计列表里，只写了热身动作的ListView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,10 +72,19 @@
         <activity
             android:name=".ui.EditMyInfoActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".ui.MakePlanActivity" />
+        <activity
+            android:name=".ui.MakePlanActivity"
+            android:launchMode="singleTask" />
         <activity android:name=".ui.ChooseActionActivity" />
-        <activity android:name=".ui.MyHomeActivity" />
-        <activity android:name=".ui.NewsActivity"></activity>
+        <activity
+            android:name=".ui.MyHomeActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".ui.NewsActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".ui.ActionDetailsActivity"
+            android:launchMode="singleTask" />
     </application>
 
 </manifest>
