微信文章的获取完成，但是有一点小瑕疵，列表的图片都是一样的，上拉加载时获取的文章也是一样的

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,7 +108,8 @@
             android:name=".ui.AdvertisementActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.RegisterUserInfoActivity"></activity>
+        <activity android:name=".ui.RegisterUserInfoActivity" />
+        <activity android:name=".ui.ShowWXActivity"></activity>
     </application>
 
 </manifest>
