将文章收藏的上传至bmob服务器，每一个账号都有自己的收藏夹

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,7 +109,8 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.RegisterUserInfoActivity" />
-        <activity android:name=".ui.ShowWXActivity"></activity>
+        <activity android:name=".ui.ShowWXActivity" />
+        <activity android:name=".ui.WxCollectedActivity"></activity>
     </application>
 
 </manifest>
