--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'cn.yipianfengye.android:zxing-library:2.1'
     compile project(':pulltorefresh')
+    //compile project(':lib-zxing')
 }
