--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'cn.yipianfengye.android:zxing-library:2.1'
+    compile 'pub.devrel:easypermissions:0.2.0'
     compile project(':pulltorefresh')
     //compile project(':lib-zxing')
 }
